Fix text alignment issue with buttons

--- a/src/settings/style.css
+++ b/src/settings/style.css
@@ -265,21 +265,21 @@ input[type="range"]
 
 #pageDictionary #controls > *
 {
-	display: block;
 	width: 100%;
-
 	height: 80px;
 	box-sizing: border-box;
 	border: none;
 	border-radius: 10px;
 	margin-bottom: 10px;
-	text-align: center;
-	line-height: 80px;
 	color: black;
 	text-decoration: none;
 	font-size: 12pt;
 	cursor: pointer;
 	box-shadow: rgba(0, 0, 0, 0.6) 2px 4px 5px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 #pageDictionary #controls > *:active
 {
